--- a/project_gemach/fronted-angular/src/app/gemach/header-gemach/header-gemach.component.html
+++ b/project_gemach/fronted-angular/src/app/gemach/header-gemach/header-gemach.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="btn btn-sm btn-ghost-info mr-sm-1" [routerLink]="'login'" routerLinkActive="active" href="#">התחברות</a>
+                <a class="btn btn-sm btn-ghost-info mr-sm-1" [routerLink]="'login'" routerLinkActive="active" href="#">כניסה</a>
             </li>
             <li class="nav-item">
                 <a class="btn btn-sm btn-ghost-info mr-sm-1" [routerLink]="'signup'" routerLinkActive="active" href="#">הרשמה</a>
