--- a/project_gemach/fronted-angular/src/app/gemach/home-gemach/home-gemach.component.html
+++ b/project_gemach/fronted-angular/src/app/gemach/home-gemach/home-gemach.component.html
@@ -5,6 +5,6 @@
     <br>
     <br>
     <img src="../../assets/help.png" width="100" height="100" class="d-inline-block align-top" alt='קלגמ"ח'>
-    <!-- <h2 class="h2 mx-auto">{{ gemach.gemachName }}</h2> -->
+    <h2 class="h2 mx-auto">{{ gemach$.gemachName }}</h2>
 
 </div>
