--- a/project_gemach/fronted-angular/src/app/gemach/login-gemach/login-gemach.component.html
+++ b/project_gemach/fronted-angular/src/app/gemach/login-gemach/login-gemach.component.html
@@ -7,23 +7,23 @@
                         <div class="card p-4">
                             <div class="card-body">
                                 <form>
-                                    <h1>התחברות</h1>
-                                    <p class="text-muted">התחבר לחשבונך בגמ"ח זה:</p>
+                                    <h1>כניסה</h1>
+                                    <p class="text-muted">הכנס לחשבונך בגמ"ח זה:</p>
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="icon-user"></i></span>
+                                            <span class="input-group-text"><i class="cil-user"></i></span>
                                         </div>
                                         <input type="text" class="form-control" placeholder="שם משתמש" autocomplete="username" required>
                                     </div>
                                     <div class="input-group mb-4">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="icon-lock"></i></span>
+                                            <span class="input-group-text">...</span>
                                         </div>
                                         <input type="password" class="form-control" placeholder="סיסמא" autocomplete="current-password" required>
                                     </div>
                                     <div class="row">
                                         <div class="col-6">
-                                            <button type="button" class="btn btn-dark ">התחברות</button>
+                                            <button type="button" class="btn btn-dark ">כניסה</button>
                                         </div>
                                         <div class="col-6 text-right">
                                             <button type="button" class="btn btn-link px-0">שכחת את הסיסמא?</button>
