--- a/project_gemach/fronted-angular/src/app/gemach/signup-gemach/signup-gemach.component.html
+++ b/project_gemach/fronted-angular/src/app/gemach/signup-gemach/signup-gemach.component.html
@@ -10,7 +10,7 @@
                                 <p class="text-muted">צור את החשבון שלך בגמ"ח זה:</p>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="icon-user"></i></span>
+                                        <span class="input-group-text"><i class="cil-user"></i></span>
                                     </div>
                                     <input type="text" class="form-control" placeholder="שם משתמש" autocomplete="username" required>
                                 </div>
@@ -18,17 +18,17 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">@</span>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="כתובת דור אלקטרוני" autocomplete="email" required>
+                                    <input type="text" class="form-control" placeholder="כתובת דואר אלקטרוני" autocomplete="email" required>
                                 </div>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="icon-lock"></i></span>
+                                        <span class="input-group-text">...</span>
                                     </div>
                                     <input type="password" class="form-control" placeholder="סיסמא" autocomplete="new-password" required>
                                 </div>
                                 <div class="input-group mb-4">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="icon-lock"></i></span>
+                                        <span class="input-group-text">...</span>
                                     </div>
                                     <input type="password" class="form-control" placeholder="אימות סיסמא" autocomplete="new-password" required>
                                 </div>
